<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CropActivity">

   <com.theartofdev.edmodo.cropper.CropImageView
       android:id="@+id/cropImageView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:cropBorderCornerColor="@color/lagoon_700"
       app:cropBorderLineThickness="0.1dp"
       app:cropGuidelines="off"
       app:cropScaleType="centerCrop"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       android:contentDescription="image preview"
       />

   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/crop_actions"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHeight_percent="0.08"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="1.0"
       android:background="@color/lagoon_500_transparent"
       >

      <ImageButton
          android:id="@+id/confirm_crop"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/transparent"
          android:src="@drawable/ic_navigate_next"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toEndOf="@+id/rotate_right"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="@string/confirm_button"
         />

      <ImageButton
          android:id="@+id/rotate_right"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/transparent"
          android:src="@drawable/ic_rotate_right"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@id/confirm_crop"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toEndOf="@+id/crop"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="@string/rotating_right_button" />

      <ImageButton
          android:id="@+id/crop"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/transparent"
          android:src="@drawable/ic_crop"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@+id/rotate_right"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toEndOf="@id/rotate_left"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="@string/crop_button" />

      <ImageButton
          android:id="@+id/rotate_left"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@color/transparent"
          android:src="@drawable/ic_rotate_left"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toStartOf="@id/crop"
          app:layout_constraintHorizontal_bias="0.5"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          android:contentDescription="@string/rotating_left_button" />


   </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>